# WarringServer

./: Base_net_tcpServer.drawio  Base_thread_Threadpool.drawio  Base_utility_Logger.drawio  Base_utility_Timer.drawio  Demo.drawio  README.md
Base/message/: BaseMessage.cpp  BaseMessage.h  CustomMessages.cpp  CustomMessages.h  GameMessage.cpp  GameMessage.h  GatewayMessage.cpp  GatewayMessage.h  LoginMessage.cpp  LoginMessage.h
Base/net/: Acceptor.h  EpollPoller.h  EventHandler.h  EventLoop.h  EventLoopThread.h  EventLoopThreadpool.h  IOBuffer.h  NetParam.h  PollPoller.h  Poller.h  Socket.cpp  Socket.h  SocketAddr.h  TCPSocket.h  TcpConnection.h  TcpServer.h  UDPSocket.h
Base/tests/: CMakeLists.txt  multiCli.sh  testCmd.cpp  testLogger.cpp  testMessage.cpp  testRThread.cpp  testSafeHash.cpp  testTcpClient.cpp  testTcpClient.h  testTcpServer.cpp  testTime.cpp  testTimer.cpp
Base/thread/: RThread.h  RThread.inl  ThreadParam.h  Threadpool.cpp  Threadpool.h  testRThread  testRThread.cpp  testThreadpool  testThreadpool.cpp
Base/utility/: Cmd.h  Logger.cpp  Logger.h  LoggerBuffer.h  LoggerFile.cpp  LoggerFile.h  LoggerLine.cpp  LoggerLine.h  LoggerMessage.cpp  LoggerMessage.h  SafeHashmap.h  SafeQueue.h  Time.h  Timer.cpp  Timer.h  Widgets.h  randomData.h  testRandom.cpp
Broker/: RSBrokerHelper.h  RSBrokerManager.cpp  RSBrokerManager.h  RSConsumer.h  RSProducer.h
Broker/tests/: CMakeLists.txt  testCenter.cpp  testConsumer.cpp  testHelper.cpp  testManager.cpp  testProducer.cpp  testService.cpp  tmpTest  tmpTest.cpp
CenterServer/: CenterServConf.cpp  CenterServConf.h  ServiceRegistry.h  ServiceRegistryMessage.h
CenterServer/tests/: CMakeLists.txt  testService.cpp  testServiceRegistry.cpp
DBServer/: DBServConf.cpp  DBServConf.h  DBServerGateway.cpp  DBServerGateway.h  QueryTask.cpp  QueryTask.h
DBServer/cache/: RCache.cpp  RCache.h
DBServer/conf/: mongod.conf
DBServer/db/: AccountOp.cpp  AccountOp.h  CharacterOp.cpp  CharacterOp.h  Database.cpp  Database.h  Document.cpp  Document.h  Schema.h
DBServer/tests/: CMakeLists.txt  testDBServGateway.cpp  testMongoDB.cpp  testRedis.cpp
GameDataTable/: GameDataCharacterAttribute.h  GameDataCode.h
GameServer/: GameHeartbeatOp.h  GameMessageOp.cpp  GameMessageOp.h  GameServConf.cpp  GameServConf.h  GameServer.cpp  GameServer.h  SceneManager.h
GameServer/tests/: CMakeLists.txt  testGameClient.cpp  testGameServer.cpp
GatewayServer/: GatewayHeartbeatOp.h  GatewayMessageOp.cpp  GatewayMessageOp.h  GatewayServConf.cpp  GatewayServConf.h  GatewayServer.cpp  GatewayServer.h
GatewayServer/tests/: CMakeLists.txt  testGatewayClient.cpp  testGatewayServer.cpp
LoginServer/: LoginHeartbeatOp.h  LoginMessageOp.cpp  LoginMessageOp.h  LoginServConf.cpp  LoginServConf.h  LoginServer.cpp  LoginServer.h
LoginServer/tests/: CMakeLists.txt  multiCli.sh  testFakeDBServ.cpp  testLoginClient.cpp  testLoginServer.cpp
